Basic overlapping resolved

--- a/boxgine.html
+++ b/boxgine.html
@@ -13,7 +13,7 @@
 </header>
 <section>
 <fieldset>
-    <legend>Width | Height | Depth</legend>
+    <legend>Width | Height | Qty</legend>
     <input type="text" id="charWidth_txt" size="2" value="64">
     <input type="text" id="charHeight_txt" size="2" value="28">
     <input type="text" id="boxDepth_txt" size="2" value="3">
