--- a/boxgine.html
+++ b/boxgine.html
@@ -1,32 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Boxgine | 1.1</title>
-<meta charset="utf-8">
-<link rel="stylesheet" href="inc/main.css">
-<script src="inc/boxgine.js" type="text/javascript"></script>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <title>Boxgine | 1.2</title>
+    <meta name="Boxgine" content="JavaScript snippet for generating terminal boxes and isometric landscapes.">
+    <link rel="stylesheet" href="inc/main.css">
+    <script src="inc/boxgine.js" type="text/javascript"></script>
 </head>
 <body>
 <header>
-<h1><img src="box.png">Boxgine v1.1</h1>
-<br>
+    <h1><img src="inc/box.png">Boxgine v1.2</h1>
 </header>
 <section>
-<fieldset>
-    <legend>Width | Height | Qty</legend>
-    <input type="text" id="charWidth_txt" size="2" value="64">
-    <input type="text" id="charHeight_txt" size="2" value="28">
-    <input type="text" id="boxDepth_txt" size="2" value="3">
-    <button type="button" onclick="gen_btn_Click()" autofocus="true">Generate</button>
-    <button type="button" onclick="clear_btn_Click()">Clear</button>
-</fieldset>
-<fieldset>
-    <legend>Boxes</legend>
-    <textarea rows="28" cols="64" id="grid_txt" style="font-family: 'Courier New'"></textarea>
-</fieldset>
+    <h2>Sprite Tests</h2>
+    <img src="img/cube.png">
+
+    <img src="img/0LL0.png">
+    <img src="img/00LL.png">
+    <img src="img/L00L.png">
+    <img src="img/LL00.png">
+
+    <img src="img/0LLL.png">
+    <img src="img/L0LL.png">
+    <img src="img/LL0L.png">
+    <img src="img/LLL0.png">
+
+    <img src="img/0L0L.png">
+    <img src="img/L0L0.png">
+    <img src="img/LLLL.png">
+    <canvas id="map" width="750px" height="450px">
+</section>
+<section>
+        <fieldset style="position:absolute; margin-left: 300px;">
+        <legend>Width - Height - Qty</legend>
+        <input type="text" id="charWidth_txt" size="2" value="32" onchange="redraw('charWidth_txt','width_rng')">
+        <input type="range" id="width_rng" min="2" max="32" step="1" value="32" onchange="redraw('width_rng','charWidth_txt')">
+        <br>
+        <input type="text" id="charHeight_txt" size="2" value="32" onchange="redraw('charHeight_txt','height_rng')">
+        <input type="range" id="height_rng" min="2" max="32" step="1" value="32" onchange="redraw('height_rng','charHeight_txt')">
+        <br>
+        <input type="text" id="boxDepth_txt" size="2" value="3" onchange="redraw('boxDepth_txt','depth_rng')">
+        <input type="range" id="depth_rng" min="1" max="20" step="1" value="3" onchange="redraw('depth_rng','boxDepth_txt')">
+        <br>
+        <button type="button" onclick="gen_btn_Click()" autofocus="true">Generate</button>
+        <button type="button" onclick="clear_btn_Click()">Clear</button>
+        </fieldset>
+
+        <textarea rows="32" cols="32" id="grid_txt" style="font-family: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace"></textarea>
 </section>
 <footer>
-<h4><a href="http://www.johnwilliford.com">&copy; 2013 J.W.</a></h4>
+    <h4><a href="http://www.johnwilliford.com">&copy; 2013 J.W.</a></h4>
 </footer>
 </body>
 </html>
