populates on page load

--- a/boxgine.html
+++ b/boxgine.html
@@ -51,6 +51,7 @@
 <footer>
     <h4><a href="http://www.johnwilliford.com">&copy; 2013 J.W.</a></h4>
 </footer>
+<script>window.onload = buildArr;</script>
 </body>
 </html>
 
